--- a/weasis-base/weasis-base-ui/src/main/java/org/weasis/base/ui/messages.properties
+++ b/weasis-base/weasis-base-ui/src/main/java/org/weasis/base/ui/messages.properties
@@ -6,6 +6,10 @@ WeasisAboutBox.sys=System Information
 WeasisAboutBox.about=About %s
 WeasisAboutBox.val=Value
 
+WeasisAblyBox.close=Close
+WeasisAblyBox.title=Ably test
+WeasisAblyBox.send=Send message
+
 WeasisWin.display=View
 WeasisWin.exit_mes=Do you really want to exit?
 WeasisWin.export=Export
