--- a/weasis-base/weasis-base-ui/src/main/java/org/weasis/base/ui/messages.properties
+++ b/weasis-base/weasis-base-ui/src/main/java/org/weasis/base/ui/messages.properties
@@ -9,6 +9,9 @@ WeasisAboutBox.val=Value
 WeasisAblyBox.close=Close
 WeasisAblyBox.title=Ably test
 WeasisAblyBox.send=Send message
+WeasisAblyBox.login=Login
+WeasisAblyBox.username=User name
+WeasisAblyBox.inputtext=Input text
 
 WeasisWin.display=View
 WeasisWin.exit_mes=Do you really want to exit?
