Added multiple slide tile synch option

--- a/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
+++ b/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
@@ -196,6 +196,7 @@ SimpleTableModel.val=Value
 
 SynchView.def_s=Default Stack
 SynchView.def_t=Default Tile
+SynchView.def_mst=Multiple Slide Tile
 SynchView.none=None
 
 Tools.pixelInfo=Pixel info
