Added modality options

--- a/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
+++ b/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
@@ -32,6 +32,12 @@ GeneralSetting.lf=Look & Feel
 GeneralSetting.language Language
 GeneralSetting.language.data Regional Format
 
+ModalitySetting.title=Modality Settings
+ModalitySettings.CT=CT
+ModalitySettings.CR=CR
+ModalitySettings.DX=DX
+ModalitySettings.US=US
+
 OpenPreferencesAction.title=Preferences
 
 AbstractLayerModel.del_conf=Are you sure you want to delete %d graphic(s)?
