--- a/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
+++ b/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
@@ -33,6 +33,8 @@ GeneralSetting.language Language
 GeneralSetting.language.data Regional Format
 
 ModalitySetting.title=Modality Settings
+ModalitySettings.synch=Synch
+ModalitySettings.layout=Layout
 ModalitySettings.CT=CT
 ModalitySettings.CR=CR
 ModalitySettings.DX=DX
@@ -79,6 +81,7 @@ ImageViewerPlugin.2=%s Views
 ImageViewerPlugin.fullscreen=Fullscreen view
 ImageViewerPlugin.layout_c1x2=3 views (row 1,2)
 ImageViewerPlugin.layout_c2x1=3 views (col 2,1)
+ImageViewerPlugin.layout_dump=DICOM information
 
 measure.angle=Angle
 measure.area=Area
