--- a/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
+++ b/weasis-core/weasis-core-ui/src/main/java/org/weasis/core/ui/messages.properties
@@ -35,10 +35,7 @@ GeneralSetting.language.data Regional Format
 ModalitySetting.title=Modality Settings
 ModalitySettings.synch=Synch
 ModalitySettings.layout=Layout
-ModalitySettings.CT=CT
-ModalitySettings.CR=CR
-ModalitySettings.DX=DX
-ModalitySettings.US=US
+ModalitySettings.scrollset=Scroll Set
 
 OpenPreferencesAction.title=Preferences
 
